2010-05-14  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14367: Install Tool does not provide a logout possibility (thanks to Lars Houmark)

2010-05-13  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed issue #13670: Performance optimization: change while(list() to foreach() (thanks to Georg Ringer and Steffen Gebert)

2010-05-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12803: Creating or deleting ENABLE_INSTALL_TOOL file saves settings in "User Settings"
	* Fixed bug #14341: c&p error in t3lib_div::logDeprecatedFunction
	* Fixed bug #14365: Bug: Install Tool skin is sometimes wrong (thanks to Lars Houmark)
	* Fixed bug #14336: Merge modules "Cleanup and typo3temp/" of the Install Tool (thanks to Steffen Gebert)

2010-05-13  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed bug #14379: CSS issues for Internet Explorer version 6 and 7 (thanks to Jigal van Hemert)

2010-05-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #14360: htmlArea RTE: Toolbar and context menu styling needs adjustments
	* Fixed bug #14374: htmlArea RTE: Language plugin may cause js error on RTE initialization

2010-05-12  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #14052: cache_treelist is out of date after setting hidden=0 (thanks to Steffen Gebert)

2010-05-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #9455: RTE incorrectly modifies external links and causes problems with subdomains
	* Fixed bug #14360: htmlArea RTE: Toolbar and context menu styling needs adjustments

2010-05-07  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14335: Install Tool buttons have no hover state (thanks to Steffen Gebert)

2010-05-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to feature #14014: htmlArea RTE should use version numbering method for CSS and JS files
	* Fixed bug #14349: htmlArea RTE: Unavailability of hot key map may cause plugin to fail
	* Follow-up to feature #14277: Apply gzip compression to htmlArea RTE concatenated js script