@@ -8,8 +8,9 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>###TITLE###</title>
 		###STYLESHEET###
+		###JAVASCRIPT###
 	</head>
-	<body ###BODYCLASS###>
+	<body>
 		<div id="container">
 			<h1>TYPO3</h1>
 			<div class="typo3-message message-warning">
